--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="welcomeMessage">Tweet me - I dare you!!</string>
     <string name="loginButton">Login</string>
     <string name="submitButton">Submit</string>
+    <string name="tweetingTitle">What\'s happening?</string>
+    <string name="cancelButton">X</string>
+    <string name="userIcon">User Icon</string>
+    <string name="imageIcon">Image Icon</string>
+    <string name="imagesButton">Images Button</string>
+    <string name="selectContact">Select Contact</string>
+    <string name="emailTweetVia">Email Tweet via</string>
+    <string name="tweetButton">Tweet</string>
+    <string name="counter">140</string>
 </resources>
