Added new referenced strings in the strings.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="logout">Logout</string>
     <string name="clear">clear</string>
 
+    <string name="username_summary">Please enter your user name</string>
+    <string name="username">Username</string>
+    <string name="password_summary">You may set your password here</string>
+    <string name="password">Password</string>
+
 </resources>
