--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,41 +1,45 @@
 <resources>
+    //----------- Welcome -----------\\
     <string name="app_name">MyTweetApp</string>
     <string name="welcomeTitle">Welcome to myTweetApp</string>
-    <string name="twitter_icon">Twitter Icon</string>
+    <string name="twitterIcon">Twitter Icon</string>
     <string name="welcomeMessage">Tweet me - I dare you!!</string>
     <string name="welcomeLogin">Login</string>
     <string name="welcomeSignup">Signup</string>
 
-
-    <string name="tweetingTitle">What\'s happening?</string>
-    <string name="cancelButton">X</string>
-    <string name="userIcon">User Icon</string>
-    <string name="imageIcon">Image Icon</string>
-    <string name="imagesButton">Images Button</string>
-    <string name="selectContact">Select Contact</string>
-    <string name="emailTweetVia" />
-    <string name="tweetButton">Tweet</string>
+    //----------- Tweet Page -----------\\
     <string name="counter">140</string>
+    <string name="tweetButton">Tweet Me</string>
+    <string name="tweetingTitle">What\'s happening?</string>
+    <string name="date">Date</string>
+    <string name="selectContact">Select Contact</string>
+    <string name="emailTweetVia">Email Tweet via</string>
+
+    //----------- Signup -----------\\
     <string name="signUpTitle">Please enter your details</string>
-    <string name="signupFirstName">first name</string>
+    <string name="signupFirstName"> first name</string>
     <string name="signupLastName">last name</string>
     <string name="signupEmail">email</string>
     <string name="signupPassword">password</string>
     <string name="signupButton">Signup</string>
+
+    //----------- Login -----------\\
     <string name="loginTitle">Enter your email and password</string>
     <string name="loginSubtitle">you must be signed up to enter</string>
     <string name="loginEmail">email</string>
     <string name="loginPassword">password</string>
-    <string name="login">login</string>
-    <string name="menu">menu</string>
-    <string name="account">Account</string>
+    <string name="login">Login</string>
+
+    //----------- Menu -----------\\
+    <string name="menu">Menu</string>
+    <string name="timeline">TimeLine</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
-    <string name="clear">clear</string>
 
-    <string name="username_summary">Please enter your user name</string>
+    <string name="clear">Clear</string>
     <string name="username">Username</string>
-    <string name="password_summary">You may set your password here</string>
+    <string name="usernameSubTitle">Please enter your user name</string>
     <string name="password">Password</string>
+    <string name="passwordSubTitle">You may set your password here</string>
 
 </resources>
