--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="login_subtitle">you must be signed up to enter</string>
     <string name="login_email">email</string>
     <string name="login_password">password</string>
-    <string name="login">Login</string>
+    <string name="login_button">Login</string>
 
 
     //---------- TIMELINE ----------\\
@@ -44,6 +44,7 @@
     //------------ MENU -----------\\
     <string name="menu">Menu</string>
     <string name="timeline">TimeLine</string>
+    <string name="clear">Clear Tweets</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
 
